# Pix

./: .gitignore  Cargo.toml
docs/: TODO.md  distance_functions.md
palettes/: 2bit-demichrome.hex  akc12.hex  altpyro.hex  bastille-8.hex  blessing.hex  bloodlust.hex  bluem0ld.hex  brewerviridis.hex  bubblegum-16.hex  chasm.hex  citrink.hex  cl8uds.hex  cryptic-ocean.hex  custodian-8.hex  cybergum6.hex  darkseed-16.hex  default48.hex  dream-haze-8.hex  dreamscape8.hex  enbydiade6.hex  ephemera.hex  escape9.hex  funkyfuture-8.hex  gothic-bit.hex  hollow.hex  hope-diamond.hex  hortensia-diamond.hex  ink-crimson.hex  inkpink.hex  justparchment8.hex  late-night-bath.hex  lospec-gb.hex  mojave20.hex  monometalic.hex  origami-clouds.hex  painted-parchment-9.hex  paper-pixels.hex  paperback-2.hex  pastel-pop-16-color.hex  pixel-ink.hex  (+12 more)
src/: colour.rs  consts.rs  ditherer.rs  image.rs  main.rs  palette.rs  utils.rs
tools/pixcel/: pyproject.toml
tools/pixcel/pixcel/: pixcel.py
tools/pview/: build.bat  build.sh  pview.c
workflows/: example.json  spec.md
